# tungsten

./: .gitignore  CMakeLists.txt  LICENSE
environments/: llvm-14-macos-brew.sh
eval/: binops.h  dispatch.h  eval-gen.py  opcodes.h  register.h  serdes.h  unops.h  vm.h
src/ast/: value.cpp
src/eval/: register.cpp  vm.cpp
tests/: test_dispatch.cpp  test_vm.cpp
